// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BorderedBox renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  border-width: 1px;
  border-color: var(--themeBorder, #DADDE2);
  border-style: solid;
  border-radius: 0;
}

<div
    class="emotion-0"
    data-cy="borderedBox"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`BorderedBox renders with all props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  border-width: 1px;
  border-color: var(--themeBorderHeavy, #1B2029);
  border-top-style: solid;
  border-radius: 4px;
}

<div
    class="emotion-0"
    data-cy="borderedBox"
  >
    Content
  </div>
</DocumentFragment>
`;
